plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.studioedge'
version = '0.0.1-SNAPSHOT'
description = 'Focus to Level Up - Study Timer & Gamification Service'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// spring boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security' 

	// database
	runtimeOnly 'com.mysql:mysql-connector-j'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// aws
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// webclient (for Apple API)
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// gson (for social login APIs)
	implementation 'com.google.code.gson:gson:2.10.1'

	// spring batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'

	// google oauth (for Google Sign In) - using WebClient instead of Google API Client
	// We'll verify Google ID Token using our existing JWT library

	// google auth (for Google Play receipt validation & Firebase Admin SDK)
	// Firebase Admin SDK 9.7.0 requires 1.37.1+ (see gradle dependencies output)
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.37.1'

	// dotenv
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'

	// firebase admin sdk (for pre-registration rewards)
	implementation 'com.google.firebase:firebase-admin:9.7.0'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// testImplementation 'org.springframework.batch:spring-batch-test'
	// testImplementation 'org.springframework.security:spring-security-test' // TODO: Security 구현 시 활성화
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
